--- a/MapsThing/app/build.gradle
+++ b/MapsThing/app/build.gradle
@@ -20,9 +20,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.gms:play-services:6.1.11'
     compile 'com.android.support:appcompat-v7:21.0.+'
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.sothree.slidinguppanel:library:+'
+    compile 'joda-time:joda-time:2.5'
+
 }
