--- a/MapsThing/app/build.gradle
+++ b/MapsThing/app/build.gradle
@@ -25,5 +25,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.sothree.slidinguppanel:library:+'
     compile 'joda-time:joda-time:2.5'
-
+    compile 'com.r0adkll:postoffice:1.1.4'
 }
