--- a/MapsThing/app/src/main/AndroidManifest.xml
+++ b/MapsThing/app/src/main/AndroidManifest.xml
@@ -23,6 +23,23 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".ui.RoutesActivity"
+            android:label="@string/title_activity_routes"
+            android:parentActivityName=".ui.MapsActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="phillipcarter.com.mapsthing.ui.MapsActivity" />
+        </activity>
+        <activity
+            android:name=".ui.RouteViewActivity"
+            android:label="@string/title_activity_route_view"
+            android:parentActivityName=".ui.RoutesActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="phillipcarter.com.mapsthing.ui.RoutesActivity" />
+        </activity>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
